Added test functions
